1 May 2003

RELEASE 0.0.2

1 June 2003

RELEASE 0.0.4

21 June 2003
+ Fix error where we could allocate a used sector!  ARGH!

RELEASE 0.0.5

18 July 2004
+ Minor bug fix

RELEASE 0.0.6

19 August 2007
+ Fix so compiles with newish gcc
+ Update asoft_detoken to match documentation found online
+ Create tokenize_asoft

RELEASE 0.0.7

18 August 2009
+ Fix warnings on recent gcc.
+ Audit much of the extisting dos33 code.

19 August 2009
+ Add integer basic detokenizer
+ Implement lock/unlock in dos33
+ Implement undelete in dos33
+ Implement rename in dos33

RELEASE 0.0.8

11 May 2012
+ Make a lot of changes for presentation code
+ Add asoft_presenter
+ Add pcx2hgr
+ Add shape_table
+ Update dos33 to accept -y argument
+ Fix some minor bugs

RELEASE 0.0.10