@@ -1,3 +1,4 @@
+
 pcx2hgr:
    error checking
    complain if not 140x160 or 140x192
